# painter

./: .gitignore  .gitmodules  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  DESIGN.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NOTES  README.md  docker-compose.yaml
docker/: clean.sh  docker-compose.yaml  queries.md
graph-imports/: README.md  bc_merge.sh  crate_times.py  export.sql  import.sql  metadata.json  schema.sql  sedd9zl90  transform.sh  transform_cratesio_db.sh  version_times.py
llvm-ir-analysis/: .gitignore  Cargo.toml  LICENSE  README.md
llvm-ir-analysis/src/: call_graph.rs  control_dep_graph.rs  control_flow_graph.rs  dominator_tree.rs  functions_by_type.rs  lib.rs
llvm-ir-analysis/tests/: basic.rs  call.rs  loop.rs  rustpanic.rs
llvm-ir-analysis/tests/bcfiles/: Makefile  loop.bc  loop.c  loop.ll
poc/: README.md  depends.rs  depends_from_raw.rs  graph.rs  main.rs
simple-test/: Cargo.toml
simple-test/src/: main.rs
src/: analysis.rs  compile.rs  crate_fs.rs  db.rs  error.rs  index.rs  lib.rs  main.rs
test_data/: serde-076a07fe30dd676e.bc  serde-076a07fe30dd676e.bc.callgraph.dot  serde-23d8a7dd21f7ae02.bc  simple_test-128fe9b9c0bcc910.bc  simple_test-8743fa498d06755b.bc  simple_test-8743fa498d06755b.bc.callgraph.dot  simple_test-e181c865fbe6d4dd.bc  simple_test-e181c865fbe6d4dd.ll.callgraph.dot  simple_test-e469d082548e660f.bc
