[package]
name = "painter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "painter"
path = "src/main.rs"


[features]
default = ["neo4j"]
neo4j = ["neo4rs"]

[dependencies]
# Internals
thiserror = "1.0"
clap = { version = "4.1", features = ["derive"] }

# async
tokio = { version = "1.5.0", features = ["full"] }
futures = "0.3"
rayon = "1.7"

llvm-ir-analysis = { path = "llvm-ir-analysis", features = ["llvm-15"] }
rustc-demangle = "0.1"

#Utility
walkdir = "2.3"
crates-index = "0.19"

log = "0.4"
env_logger = "0.10"

semver = { version = "1.0" }
lenient_semver = { version = "0.4" }

# serialization
serde = { version = "1", features = ["derive"]}
toml = { version = "0.7" }
csv = { version = "1.2" }
serde_json = "1"

# Compression
flate2 = "1.0"
tar = "0.4"

# Data
circular-buffer = "0.1"

# Db
neo4rs = { version="0.6", optional = true }