[package]
name = "llvm-ir-analysis"
version = "0.3.2"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Static analysis on LLVM IR"
documentation = "https://docs.rs/llvm-ir-analysis"
repository = "https://github.com/cdisselkoen/llvm-ir-analysis"
readme = "README.md"
keywords = ["llvm", "control-flow", "cfg", "dominator", "dependence"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6"
llvm-ir = "0.9.0"
log = "0.4"
petgraph = { version = "0.6.0", default-features = false, features = ["graphmap"] }

[dev-dependencies]
env_logger = "0.9"
itertools = "0.10"

[features]
# Select the LLVM version to be compatible with.
# You _must_ enable exactly one of the following features.
llvm-8 = ["llvm-ir/llvm-8", "llvm-8-or-lower", "llvm-8-or-greater"]
llvm-9 = ["llvm-ir/llvm-9", "llvm-9-or-lower", "llvm-9-or-greater"]
llvm-10 = ["llvm-ir/llvm-10", "llvm-10-or-lower", "llvm-10-or-greater"]
llvm-11 = ["llvm-ir/llvm-11", "llvm-11-or-lower", "llvm-11-or-greater"]
llvm-12 = ["llvm-ir/llvm-12", "llvm-12-or-lower", "llvm-12-or-greater"]
llvm-13 = ["llvm-ir/llvm-13", "llvm-13-or-lower", "llvm-13-or-greater"]
llvm-14 = ["llvm-ir/llvm-14", "llvm-14-or-lower", "llvm-14-or-greater"]
llvm-15 = ["llvm-ir/llvm-15", "llvm-15-or-lower", "llvm-15-or-greater"]

# These features select the corresponding LLVM version, and require an exact
# match between the system LLVM version and the LLVM version chosen here. For
# more information, see the "strict-versioning" feature on `llvm-sys`.
llvm-8-strict = ["llvm-8", "llvm-ir/llvm-8-strict"]
llvm-9-strict = ["llvm-9", "llvm-ir/llvm-9-strict"]
llvm-10-strict = ["llvm-10", "llvm-ir/llvm-10-strict"]
llvm-11-strict = ["llvm-11", "llvm-ir/llvm-11-strict"]
llvm-12-strict = ["llvm-12", "llvm-ir/llvm-12-strict"]
llvm-13-strict = ["llvm-13", "llvm-ir/llvm-13-strict"]
llvm-14-strict = ["llvm-14", "llvm-ir/llvm-14-strict"]
llvm-15-strict = ["llvm-15", "llvm-ir/llvm-15-strict"]

###
# For convenience, these automatically-enabled features allow us to avoid
# checking complex combinations of features all the time. They are not meant to
# be manually enabled; use the above llvm-x features instead
llvm-8-or-greater = []
llvm-9-or-greater = ["llvm-8-or-greater"]
llvm-10-or-greater = ["llvm-9-or-greater"]
llvm-11-or-greater = ["llvm-10-or-greater"]
llvm-12-or-greater = ["llvm-11-or-greater"]
llvm-13-or-greater = ["llvm-12-or-greater"]
llvm-14-or-greater = ["llvm-13-or-greater"]
llvm-15-or-greater = ["llvm-14-or-greater"]

llvm-8-or-lower = ["llvm-9-or-lower"]
llvm-9-or-lower = ["llvm-10-or-lower"]
llvm-10-or-lower = ["llvm-11-or-lower"]
llvm-11-or-lower = ["llvm-12-or-lower"]
llvm-12-or-lower = ["llvm-13-or-lower"]
llvm-13-or-lower = ["llvm-14-or-lower"]
llvm-14-or-lower = ["llvm-15-or-lower"]
llvm-15-or-lower = []
###

[package.metadata.docs.rs]
# Generate docs.rs documentation with the llvm-10 feature
features = ["llvm-10"]
